// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideDrawer renders as expected when drawer is hiding 1`] = `
<div
  className="sidedrawer mui--no-user-select left"
/>
`;

exports[`SideDrawer renders as expected when drawer is showing 1`] = `
<div
  className="sidedrawer mui--no-user-select left active"
/>
`;
